<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:setting="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff7f7f7"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/device_setting_scroll"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:id="@+id/device_scroll_inner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/device_info_setting"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    android:id="@+id/device_info_tx"
                    style="@style/linearlayout_menu_left_textview"
                    android:layout_width="fill_parent"
                    android:drawableRight="@drawable/ic_enter"
                    android:text="@string/IDS_plugin_settings_device_information" />
            </LinearLayout>

            <View style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/pin_setting"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    android:id="@+id/pin_tx"
                    style="@style/linearlayout_menu_red_left_textview"
                    android:text="@string/IDS_plugin_settings_pin" />

                <ImageView
                    android:id="@+id/red"
                    style="@style/linearlayout_menu_red" />

                <TextView style="@style/linearlayout_menu_red_right_textview" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_pin"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/simlock_setting"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    android:id="@+id/simlock_tx"
                    style="@style/linearlayout_menu_red_left_textview"
                    android:text="@string/IDS_plugin_setting_simlock_unlock_device" />

                <ImageView
                    android:id="@id/red"
                    style="@style/linearlayout_menu_red" />

                <TextView
                    android:id="@+id/simlock_status"
                    style="@style/linearlayout_menu_red_right_textview"
                    android:ellipsize="end"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_simlock"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/online_update_setting"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    android:id="@+id/online_update_tx"
                    style="@style/linearlayout_menu_red_left_textview" />

                <ImageView
                    android:id="@id/red"
                    style="@style/linearlayout_menu_red" />

                <TextView style="@style/linearlayout_menu_red_right_textview" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_device_update"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/device_setting_storage"
                style="@style/linearlayout_menu_list_item"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/device_setting_storage_titile"
                    style="@style/linearlayout_menu_left_textview"
                    android:layout_width="fill_parent"
                    android:drawableRight="@drawable/ic_enter"
                    android:text="@string/IDS_plugin_storage_title" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_storage"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/harddisk_manager"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    android:id="@id/pin_tx"
                    style="@style/linearlayout_menu_red_left_textview"
                    android:text="@string/IDS_plugin_harddisk_storage_title" />

                <ImageView
                    android:id="@id/red"
                    style="@style/linearlayout_menu_red" />

                <TextView style="@style/linearlayout_menu_red_right_textview" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_harddisk"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/led_switch_layout"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    style="@style/linearlayout_menu_left_textview"
                    android:text="@string/IDS_plugin_setting_led" />

            </LinearLayout>

            <View
                android:id="@+id/line_below_led"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/shopassist_switch_layout"
                style="@style/linearlayout_menu_list_item" >

                <TextView
                    android:id="@+id/shopassist_tv"
                    style="@style/linearlayout_menu_left_textview"
                    android:text="@string/IDS_plugin_setting_shop_assist" />

            </LinearLayout>

            <View
                android:id="@+id/line_below_shopassist"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/restore_setting"
                style="@style/linearlayout_menu_list_item"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/restore_tx"
                    style="@style/linearlayout_menu_left_textview"
                    android:layout_width="fill_parent"
                    android:drawableRight="@drawable/ic_enter"
                    android:text="@string/IDS_plugin_settings_restore_factory" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_restore"
                style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/restart_setting"
                style="@style/linearlayout_menu_list_item"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/restart_tx"
                    style="@style/linearlayout_menu_left_textview"
                    android:layout_width="fill_parent"
                    android:drawableRight="@drawable/ic_enter"
                    android:text="@string/IDS_plugin_settings_restart" />
            </LinearLayout>

            <View style="@style/CommonLineStyle" />

            <LinearLayout
                android:id="@+id/setup_power_off"
                style="@style/linearlayout_menu_list_item"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/setup_power_off_tx"
                    style="@style/linearlayout_menu_left_textview"
                    android:layout_width="fill_parent"
                    android:drawableRight="@drawable/ic_enter"
                    android:text="@string/IDS_plugin_settings_power_off"
                    android:textColor="@color/exit_normal" />
            </LinearLayout>

            <View
                android:id="@+id/line_below_poweroff"
                style="@style/CommonLineStyle" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>