<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:setting="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff7f7f7"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/id_deviceinfo"
        style="@style/linearlayout_menu_list_item"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/deviceinfo_modified_text"
            style="@style/linearlayout_menu_left_textview"
            android:layout_width="fill_parent"
            android:drawableRight="@drawable/ic_enter"
            android:text="@string/IDS_plugin_settings_device_info" />
    </LinearLayout>

    <View
        android:id="@+id/id_deviceinfo_line"
        style="@style/CommonLineStyle" />

    <LinearLayout
        android:id="@+id/id_update_software"
        style="@style/linearlayout_menu_list_item"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/id_update_software_text"
            style="@style/linearlayout_menu_left_textview"
            android:layout_width="fill_parent"
            android:drawableRight="@drawable/ic_enter"
            android:text="@string/IDS_plugin_settings_update_system_software" />
    </LinearLayout>

    <View
        android:id="@+id/id_update_software_line"
        style="@style/CommonLineStyle" />
    <LinearLayout
        android:id="@+id/id_reboot"
        style="@style/linearlayout_menu_list_item"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/id_reboot_text"
            style="@style/linearlayout_menu_left_textview"
            android:layout_width="fill_parent"
            android:drawableRight="@drawable/ic_enter"
            android:text="@string/IDS_plugin_settings_reboot" />
    </LinearLayout>

    <View
        android:id="@+id/id_reboot_line"
        style="@style/CommonLineStyle" />

  </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/warning"
            style="@style/SettingsFontWithLittleRightPadding"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_height_1text"
            android:drawableLeft="@drawable/server_warnning"
            android:drawablePadding="@dimen/menu_layout_tv_drawable_padding"
            android:gravity="center_vertical"
            android:text="@string/warning" />
    </LinearLayout>

</RelativeLayout>