<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff7f7f7"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/id_account_modified_password"
        style="@style/linearlayout_menu_list_item"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/account_modified_text"
            style="@style/linearlayout_menu_left_textview"
            android:layout_width="fill_parent"
            android:drawableRight="@drawable/ic_enter"
            android:text="@string/IDS_plugin_settings_account_modify_password" />
    </LinearLayout>

    <View
        android:id="@+id/id_account_modified_password_line"
        style="@style/CommonLineStyle" />

    <LinearLayout
        android:id="@+id/id_acount_logout"
        style="@style/linearlayout_menu_list_item"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/id_account_manager_logout_text"
            style="@style/linearlayout_menu_left_textview"
            android:layout_width="fill_parent"
            android:drawableRight="@drawable/ic_enter"
            android:text="@string/IDS_plugin_settings_account_logout" />
    </LinearLayout>

    <View
        android:id="@+id/id_acount_logout_line"
        style="@style/CommonLineStyle" />
</LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_panel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/warning"
            style="@style/SettingsFontWithLittleRightPadding"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_height_1text"
            android:drawableLeft="@drawable/server_warnning"
            android:drawablePadding="@dimen/menu_layout_tv_drawable_padding"
            android:gravity="center_vertical"
            android:text="@string/warning" />
    </LinearLayout>
</RelativeLayout>